# tiley

./: .gitignore  .gitmodules  LICENSE  README.md  README_zh_cn.md  dev_run.sh  hotkey.json  learing.md  learning_2.md  meson.build  meson.options  tiley_log1.txt  tiley_log2.txt  useful.md  useful_commands.md  快捷指令.md
archive/: Makefile  tiley.c
design/: design_private.md  louvre_migration.md  thought.md
include/: core.hpp  decoration.hpp  events.h  hotkey.hpp  image_util.hpp  interact.hpp  renderer.hpp  server.hpp  types.h  window_util.hpp
src/: Makefile  config.h.in  meson.build  tiley.cpp  tiley_louvre.cpp
src/assets/shaders/: rounded_corners.frag  rounded_corners.vert  rounded_corners_es2.frag  rounded_corners_es3.frag  rounded_corners_es3.vert
src/config/: hotkey.json
src/events/: event_hotkey.cpp  event_input.cpp  event_interact.cpp  event_output.cpp  event_surface.cpp  meson.build  指令快捷键文档.md
src/foreign/: hoykey_config_en_us.py  hoykey_config_zh_cn.py
src/lib/: TileyCompositor.cpp  TileyCompositor.hpp  TileyServer.cpp  TileyServer.hpp  TileyWindowStateManager.cpp  TileyWindowStateManager.hpp  Utils.cpp  Utils.hpp  core.cpp  decoration.cpp  interact.cpp  meson.build  server.cpp  types.h  types.hpp
src/lib/client/: Client.cpp  Client.hpp  ToplevelRole.cpp  ToplevelRole.hpp  WallpaperManager.cpp  WallpaperManager.hpp  meson.build
src/lib/client/render/: SSD.cpp  SSD.hpp  Shader.cpp  Shader.hpp
src/lib/client/views/: LayerView.hpp  SurfaceView.cpp  SurfaceView.hpp
src/lib/client/views/extra/: DebugView.hpp
src/lib/config/: Config.cpp  Config.hpp
src/lib/core/: BaseContainer.hpp  Container.cpp  Container.hpp  DynamicContainer.cpp  DynamicContainer.hpp  GridContainer.hpp  UserAction.cpp  UserAction.hpp
src/lib/core/layout/: BaseLayout.hpp  DynamicLayout.cpp  DynamicLayout.hpp  GridLayout.cpp  GridLayout.hpp
src/lib/input/: Handle.cpp  Handle.hpp  Keyboard.cpp  Keyboard.hpp  Pointer.cpp  Pointer.hpp  Seat.cpp  Seat.hpp  ShortcutManager.cpp  ShortcutManager.hpp
src/lib/interact/: interact.cpp  interact.hpp
src/lib/ipc/: IPCManager.cpp  IPCManager.hpp
src/lib/output/: Output.cpp  Output.hpp
src/lib/scene/: Scene.cpp  Scene.hpp
src/lib/surface/: Surface.cpp  Surface.hpp  SurfaceView.cpp  SurfaceView.hpp
src/lib/test/: PerfmonRegistry.cpp  PerfmonRegistry.hpp  PerformanceMonitor.cpp  PerformanceMonitor.hpp  test_1.txt
src/renderer/: meson.build  renderer.cpp  shader_utils.cpp
src/shaders/: tint.frag  tint.vert
src/test/: PerfmonRegistry.cpp  PerfmonRegistry.hpp  PerformanceMonitor.cpp  PerformanceMonitor.hpp  meson.build
src/test/algorithm/: grid_layout.py
src/test/scripts/: draw_graph.py
src/utils/: image_util.cpp  meson.build  window_util.cpp
src/wrap/: c99_unsafe_defs_wrap.c  c99_unsafe_defs_wrap.h  meson.build
